# auto-clicker

./: .gitignore  Cargo.toml  README.md  config.json  package.json  使用说明.txt
src/: main.rs
