[package]
name = "auto_clicker"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Media",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"